--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -164,6 +164,7 @@ code {
   font-size: 0.9375em;
   border: 1px solid $border-color-01;
   border-radius: 3px;
+  color: $code-font-color;
   background-color: $code-background-color;
 }
 
