--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-$content-width: 60%;
+$content-width: 1150px;
 $code-background-color: #002B36;
 $code-font-color: #b7c7c9;
 
