--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     <br>
     <h1 class="post-title">About</h1>
   </header></div>
-  <div class="post-content">
+  <div class="post-content" width="100px">
     {{ content }}
   </div>
 
