Moved docs assets to root

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
   
           <div class="trigger">
 
-            <a class="page-link" target="_blank" href="{{ site.baseurl }}/assets/docs/resume.pdf">RESUME</a>
+            <a class="page-link" target="_blank" href="{{ site.baseurl }}/resume.pdf">RESUME</a>
             {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
